--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -22,15 +22,19 @@
                 <br/>
                 <h3>Smart Home Web Client!</h3>
                 <br/>
+                <p id="lista"></p>
+                 <ul id="deviceList" class="collection">
+                </ul>
                 <div class="row">
                     <div class="input-field col s12 m12 l12 xl12">
                         <textarea id="textarea_1" class="materialize-textarea" style="height: 150px;" readonly></textarea>
                     </div>
+                    <button id='btnListar' class="btn waves-effect waves-light">Gran boton</button>
                     <div class="col s4 m4 l2 xl2">
-                        <button class="btn waves-effect waves-light button-view" onclick="SayHello();" name="hello_button">PRESS ME</button>
+                        <button id="btnLimpiar" class="btn waves-effect waves-light button-view" onclick="SayHello();" name="hello_button">PRESS ME</button>
                     </div>
                 </div>
-            </div>	
+            </div>
         </main>
 		<!-- Page Footer -->
         <footer class="page-footer" style="background-color:#124580">
@@ -54,5 +58,7 @@
 		<!--JavaScript at end of body for optimized loading-->
 		<script type="text/javascript" src="js/materialize.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="js/User.js"></script>
+        <script type="text/javascript" src="js/MyFramework.js"></script>
     </body>
   </html>
