--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -1,64 +1,173 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link type="text/css" rel="stylesheet" href="static/css/materialize.min.css"  media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href="static/css/styles.css"  media="screen,projection"/>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <main>
-            <!-- Navigation bar -->
-            <nav style="background-color:#124580">
-                <div class="nav-wrapper">
-                    <a href="#!" class="brand-logo left" style="margin-left: 15px;">Smart Home</a>
-                    <ul id="nav-mobile" class="right" style="margin-right: 15px;">
-                        <li><a href="#">Help</a></li>
-                    </ul>
-                </div>
-            </nav>	
-            <!-- Page Body -->
-            <div class="container">
-                <br/>
-                <h3>Smart Home Web Client!</h3>
-                <br/>
-                <p id="lista"></p>
-                 <ul id="deviceList" class="collection">
-                </ul>
+<html>
+  <head>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="static/css/materialize.min.css"
+      media="screen,projection"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="static/css/styles.css"
+      media="screen,projection"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <main>
+      <!-- Navigation bar -->
+      <nav style="background-color: #124580">
+        <div class="nav-wrapper">
+          <a href="#!" class="brand-logo left" style="margin-left: 15px"
+            >Smart Home</a
+          >
+          <ul id="nav-mobile" class="right" style="margin-right: 15px">
+            <li><a href="#">Help</a></li>
+          </ul>
+        </div>
+      </nav>
+      <!-- Page Body -->
+      <div class="container">
+        <br />
+        <h3>Smart Home Web Client!</h3>
+        <br />
+        <!-- Modal Trigger - CREATE -->
+        <button
+          id="btnCreateDevice"
+          data-target="modal1"
+          class="btn-floating blue modal-trigger"
+        >
+          <i class="material-icons">add</i>
+        </button>
+
+        <!-- Modal Structure - CREATE/EDIT -->
+        <div id="modal1" class="modal">
+          <div class="modal-content">
+            <h4>Crear dispositivo</h4>
+            <div class="row">
+              <form class="col s12">
                 <div class="row">
-                    <div class="input-field col s12 m12 l12 xl12">
-                        <textarea id="textarea_1" class="materialize-textarea" style="height: 150px;" readonly></textarea>
-                    </div>
-                    <button id='btnListar' class="btn waves-effect waves-light">Gran boton</button>
-                    <div class="col s4 m4 l2 xl2">
-                        <button id="btnLimpiar" class="btn waves-effect waves-light button-view" onclick="SayHello();" name="hello_button">PRESS ME</button>
-                    </div>
+                  <div class="input-field col s6">
+                    <input
+                      placeholder="Nombre del dispositivo"
+                      id="deviceName"
+                      type="text"
+                      class="validate"
+                    />
+                    <label for="deviceName">Nombre</label>
+                  </div>
+                  <div class="input-field col s6">
+                    <input
+                      placeholder="Descripción"
+                      id="deviceDescription"
+                      type="text"
+                      class="validate"
+                    />
+                    <label for="deviceDescription">Descripción</label>
+                  </div>
                 </div>
-            </div>
-        </main>
-		<!-- Page Footer -->
-        <footer class="page-footer" style="background-color:#124580">
-            <div class="container">
                 <div class="row">
-                    <div class="col l6 s6">
-                        <h5 class="white-text">Smart Home</h5>
-                        <p class="grey-text text-lighten-4">Copyright ### - 2021</p>
+                  <div class="input-field col s6">
+                    <div class="switch secondary-content left">
+                      <label for="deviceState">Estado</label>
+                      <label>
+                        Off
+                        <input id="deviceState" type="checkbox" />
+                        <span class="lever"></span>
+                        On
+                      </label>
                     </div>
-                    <div class="col l6 s6">
-                        <h5 class="white-text right-align">Contact</h5>
-                        <p class="white-text right-align">
-                            <a class="grey-text text-lighten-3" href="!#">Email | </a>
-                            <a class="grey-text text-lighten-3" href="!#">Twitter | </a>
-                            <a class="grey-text text-lighten-3" href="!#">LinkedIn</a>
-                        </p>
-                    </div>
+                  </div>
+                  <div class="input-field col s6">
+                    <select id="deviceType">
+                      <option value="" disabled selected>
+                        Elegir una opción
+                      </option>
+                      <option value="1">Regulable</option>
+                      <option value="2">No regulable</option>
+                    </select>
+                    <label>Tipo de dispositivo</label>
+                  </div>
                 </div>
+              </form>
             </div>
-        </footer>
-		<!--JavaScript at end of body for optimized loading-->
-		<script type="text/javascript" src="js/materialize.min.js"></script>
-		<script type="text/javascript" src="js/main.js"></script>
-        <script type="text/javascript" src="js/User.js"></script>
-        <script type="text/javascript" src="js/MyFramework.js"></script>
-    </body>
-  </html>
+          </div>
+          <div class="modal-footer">
+            <button
+              class="btn-flat waves-effect waves-red modal-close btn-cancel"
+            >
+              Cancelar
+            </button>
+            <button
+              class="btn-flat waves-effect waves-green modal-close btn-save"
+            >
+              Guardar
+            </button>
+          </div>
+        </div>
+
+        <!-- Modal Structure - DELETE-->
+        <div id="modal2" class="modal">
+          <div class="modal-content">
+            <h4>Eliminar</h4>
+            <p>¿Estás seguro de que querés eliminar el dispositivo?</p>
+          </div>
+          <div class="modal-footer">
+            <button
+              class="btn-flat waves-effect waves-red modal-close btn-cancel"
+            >
+              NO
+            </button>
+            <button
+              class="btn-flat waves-effect waves-green modal-close btn-save"
+            >
+              SI
+            </button>
+          </div>
+        </div>
+        <ul id="deviceList" class="collection"></ul>
+        <div class="row">
+          <div class="input-field col s12 m12 l12 xl12">
+            <textarea
+              id="textarea_1"
+              class="materialize-textarea"
+              style="height: 150px"
+              readonly
+            ></textarea>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- Page Footer -->
+    <footer class="page-footer" style="background-color: #124580">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s6">
+            <h5 class="white-text">Smart Home</h5>
+            <p class="grey-text text-lighten-4">Copyright ### - 2021</p>
+          </div>
+          <div class="col l6 s6">
+            <h5 class="white-text right-align">Contact</h5>
+            <p class="white-text right-align">
+              <a class="grey-text text-lighten-3" href="!#">Email | </a>
+              <a class="grey-text text-lighten-3" href="!#">Twitter | </a>
+              <a class="grey-text text-lighten-3" href="!#">LinkedIn</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="static/js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/User.js"></script>
+    <script type="text/javascript" src="js/MyFramework.js"></script>
+    <script type="text/javascript" src="js/ViewMainPage.js"></script>
+  </body>
+</html>
