--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -22,7 +22,7 @@
   <body>
     <main>
       <!-- Navigation bar -->
-      <nav style="background-color: #124580">
+      <nav class="blue">
         <div class="nav-wrapper">
           <a href="#!" class="brand-logo left" style="margin-left: 15px"
             >Smart Home</a
@@ -145,7 +145,7 @@
       </div>
     </main>
     <!-- Page Footer -->
-    <footer class="page-footer" style="background-color: #124580">
+    <footer class="page-footer" class="blue">
       <div class="container">
         <div class="row">
           <div class="col l6 s6">
