[FIX] footer background color

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -145,7 +145,7 @@
       </div>
     </main>
     <!-- Page Footer -->
-    <footer class="page-footer" class="blue">
+    <footer class="page-footer blue">
       <div class="container">
         <div class="row">
           <div class="col l6 s6">
